[package]
name = "iroh_chat_ui"
version = "0.1.0"
authors = ["Ibis Sunrosa <drsunrosa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
iroh = "0.30.0"
iroh_chat = { path = "../iroh_chat" }
serde_json = "1.0.134"
tokio = "1.42.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
